<resources>
    <string name="app_name">android_study</string>
    <string name="signin_title">MUSINSA</string>
    <string name="sign_id">ID</string>
    <string name="sign_idhint">아이디를 입력하세요</string>
    <string name="sign_password">Password</string>
    <string name="sign_passhint">비밀번호를 입력하세요</string>
    <string name="signin_in">SIGN IN</string>
    <string name="signin_up">SIGN UP</string>
    <string name="signup_title">SIGN UP</string>
    <string name="signup_mbti">MBTI</string>
    <string name="signup_mbtihint">MBTI를 입력하세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_top">TOP</string>
    <string name="home_top_price">$100000</string>
    <string name="gallery_eye">눈</string>
    <string name="gallery_main_name">눈, 코, 입</string>
</resources>